<resources>
    <string name="app_name">Tala</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dictionary_list_title">Словарь</string>
    <string name="dictionary_empty_state">В словаре пока нет записей</string>
    <string name="dictionary_list_title_selection">Добавление слов</string>
    <string name="dictionary_part_of_speech_template">Часть речи: %1$s</string>
    <string name="dictionary_part_of_speech_noun">Существительное</string>
    <string name="dictionary_part_of_speech_verb">Глагол</string>
    <string name="dictionary_part_of_speech_adjective">Прилагательное</string>
    <string name="dictionary_part_of_speech_adverb">Наречие</string>
    <string name="dictionary_part_of_speech_pronoun">Местоимение</string>
    <string name="dictionary_part_of_speech_preposition">Предлог</string>
    <string name="dictionary_part_of_speech_conjunction">Союз</string>
    <string name="dictionary_part_of_speech_interjection">Междометие</string>
    <string name="dictionary_part_of_speech_determiner">Определитель</string>
    <string name="dictionary_part_of_speech_article">Артикль</string>
    <string name="dictionary_part_of_speech_numeral">Числительное</string>
    <string name="dictionary_part_of_speech_particle">Частица</string>
    <string name="dictionary_part_of_speech_auxiliary_verb">Вспомогательный глагол</string>
    <string name="dictionary_part_of_speech_modal_verb">Модальный глагол</string>
    <string name="dictionary_part_of_speech_phrasal_verb">Фразовый глагол</string>
    <string name="dictionary_part_of_speech_gerund">Герундий</string>
    <string name="dictionary_part_of_speech_proper_noun">Собственное имя</string>
    <string name="dictionary_part_of_speech_idiom">Идиома</string>
    <string name="dictionary_ipa_template">IPA: %1$s</string>
    <string name="dictionary_level_template">Уровень: %1$s</string>
    <string name="dictionary_frequency_template">Частота: %1$.2f</string>
    <string name="dictionary_tags_template">Теги: %1$s</string>
    <string name="dictionary_base_word_template">ID базового слова: %1$d</string>
    <string name="dictionary_hint_template">Подсказка: %1$s</string>
    <string name="dictionary_error_state">Не удалось загрузить словарь</string>
    <string name="dictionary_add_button">Добавить слово</string>
    <string name="dictionary_save_button">Сохранить</string>
    <string name="dictionary_update_button">Сохранить изменения</string>
    <string name="dictionary_field_word">Слово</string>
    <string name="dictionary_field_translation">Перевод</string>
    <string name="dictionary_field_part_of_speech">Часть речи</string>
    <string name="dictionary_field_ipa">IPA</string>
    <string name="dictionary_field_hint">Подсказка</string>
    <string name="dictionary_field_frequency">Частота</string>
    <string name="dictionary_field_level">Уровень</string>
    <string name="dictionary_field_tags">Теги</string>
    <string name="dictionary_level_none">Не выбран</string>
    <string name="dictionary_tag_is_idiom">Идиома</string>
    <string name="dictionary_tag_is_phrasal">Фразовый глагол</string>
    <string name="dictionary_tag_is_collocation">Коллокация</string>
    <string name="dictionary_tag_case_sensitive">Чувствительно к регистру</string>
    <string name="dictionary_tag_is_fixed_expression">Устойчивое выражение</string>
    <string name="dictionary_tag_plural">Множественное число</string>
    <string name="dictionary_tag_past_simple">Прошедшее (Past Simple)</string>
    <string name="dictionary_tag_past_participle">Причастие прошедшего</string>
    <string name="dictionary_tag_comparative">Сравнительная степень</string>
    <string name="dictionary_tag_superlative">Превосходная степень</string>
    <string name="dictionary_error_required">Обязательное поле</string>
    <string name="dictionary_error_frequency_format">Введите число</string>
    <string name="dictionary_save_success">Слово добавлено</string>
    <string name="dictionary_update_success">Изменения сохранены</string>
    <string name="dictionary_delete_button">Удалить слово</string>
    <string name="dictionary_add_to_collection_content_description">Добавить слово в коллекцию</string>
    <string name="dictionary_image_content_description">Изображение слова</string>
    <string name="dictionary_image_edit_content_description">Изображение варианта слова</string>
    <string name="dictionary_image_pick_button">Выбрать изображение</string>
    <string name="dictionary_image_remove_button">Удалить изображение</string>
    <string name="dictionary_dependent_count_template">Связанных слов: %1$d</string>
    <string name="dictionary_group_word_count_template">Всего слов: %1$d</string>
    <string name="dictionary_delete_success">Слово удалено</string>
    <string name="dictionary_error_not_found">Запись не найдена</string>
    <string name="dictionary_tag_picker_hint">Добавить тег</string>
    <string name="dictionary_search_hint">Введите слово для поиска</string>
    <string name="dictionary_search_button">Найти</string>
    <string name="dictionary_add_manual_button">Добавить вручную</string>
    <string name="dictionary_add_group_button">Добавить группу</string>
    <string name="dictionary_add_entry_button">Добавить вариант</string>
    <string name="dictionary_group_title">Группа %1$d</string>
    <string name="dictionary_remove_group_button">Удалить группу</string>
    <string name="dictionary_expand_group_button">Развернуть группу</string>
    <string name="dictionary_collapse_group_button">Свернуть группу</string>
    <string name="dictionary_remove_entry">Удалить элемент</string>
    <string name="dictionary_empty_results">Нет результатов</string>
    <plurals name="dictionary_group_word_count">
        <item quantity="one">%d вариант</item>
        <item quantity="few">%d варианта</item>
        <item quantity="many">%d вариантов</item>
        <item quantity="other">%d вариантов</item>
    </plurals>
    <string name="collection_list_save_button">Сохранить</string>
    <string name="collection_list_name_hint">Название коллекции</string>
    <string name="collection_list_description_hint">Описание коллекции</string>
    <string name="collection_list_add_words_button">Добавить слова</string>
    <string name="collection_list_empty_state">В коллекции пока нет слов</string>
    <string name="collection_list_name_required">Введите название коллекции</string>
    <string name="collection_list_save_success">Коллекция сохранена</string>
    <string name="collection_list_save_error">Не удалось сохранить коллекцию</string>
    <string name="collection_list_word_already_added">Слово уже добавлено в коллекцию</string>
    <string name="collection_card_type_title">Типы карточек</string>
    <string name="collection_card_type_empty">Типы карточек не выбраны</string>
    <string name="collection_card_type_error_required">Выберите хотя бы один тип карточек</string>
    <string name="collection_card_type_save_button">Готово</string>
    <string name="collection_card_type_empty_state">Доступных типов карточек нет</string>
    <string name="collection_card_type_condition_on_title">Условие включения</string>
    <string name="collection_card_type_condition_off_title">Условие отключения</string>
    <string name="collection_card_type_condition_type_hint">Тип карточки</string>
    <string name="collection_card_type_condition_value_hint">Порог ответов</string>
    <string name="collection_card_type_condition_none">Нет</string>
    <string name="collection_overview_title">Коллекции</string>
    <string name="collection_overview_add_button">Создать</string>
    <string name="collection_overview_empty_state">Коллекций пока нет</string>
    <string name="collection_overview_error_state">Не удалось загрузить коллекции</string>
    <string name="lesson_list_title">Уроки</string>
    <string name="lesson_list_empty_state">Уроков пока нет</string>
    <string name="lesson_list_error_state">Не удалось загрузить уроки</string>
    <string name="lesson_list_add_button">Создать урок</string>
    <string name="lesson_nav_dictionary">Словарь</string>
    <string name="lesson_nav_collections">Коллекции</string>
    <string name="lesson_nav_settings">Настройки</string>
    <string name="lesson_add_save_button">Сохранить</string>
    <string name="lesson_add_name_hint">Название урока</string>
    <string name="lesson_add_full_name_hint">Полное название</string>
    <string name="lesson_add_collection_hint">Коллекция</string>
    <string name="lesson_add_collection_placeholder">Нажмите, чтобы выбрать</string>
    <string name="lesson_add_card_type_empty">В выбранной коллекции нет настроенных типов карточек</string>
    <string name="lesson_add_remove_card_type">Удалить</string>
    <string name="lesson_add_select_collection_title">Выберите коллекцию</string>
    <string name="lesson_add_no_collections">Сначала создайте коллекцию</string>
    <string name="lesson_add_error_name_required">Введите название урока</string>
    <string name="lesson_add_error_collection_required">Выберите коллекцию</string>
    <string name="lesson_add_error_card_types_required">Добавьте хотя бы один тип карточки</string>
    <string name="lesson_add_success">Урок создан</string>
    <string name="lesson_add_error_save">Не удалось сохранить урок</string>
    <string name="lesson_fragment_title">Урок</string>
    <string name="lesson_fragment_empty_state">Для этого урока пока нет карточек</string>
    <string name="lesson_fragment_unsupported_type">Этот тип карточки пока не поддерживается</string>
    <string name="translate_card_show_translation">Показать перевод</string>
    <string name="translate_card_answer_hard">Сложно</string>
    <string name="translate_card_answer_medium">Средне</string>
    <string name="translate_card_answer_easy">Легко</string>
    <string name="translate_card_answer_hard_description">Качество 0</string>
    <string name="translate_card_answer_medium_description">Качество 3</string>
    <string name="translate_card_answer_easy_description">Качество 5</string>
    <string name="content_description_card_image">Изображение подсказки</string>
    <string name="content_description_play_pronunciation">Озвучить слово</string>
    <string name="translate_card_result_error">Не удалось сохранить ответ</string>
    <string name="enter_word_input_hint">Введите слово на английском</string>
    <string name="enter_word_keyboard_action">Показать перевод</string>
    <string name="translation_comparison_instruction">Переставьте переводы справа, чтобы составить правильные пары.</string>
    <string name="translation_comparison_left_column_title">Слова</string>
    <string name="translation_comparison_right_column_title">Переводы</string>
    <string name="translation_comparison_user_answer">Ваш ответ: %1$s</string>
    <string name="translation_comparison_next_button">Дальше</string>
</resources>